# ossim-tcp-client

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  client.yaml
app/client-app/: CMakeLists.txt  README.md  main.cpp
app/stream-image/: CMakeLists.txt  main.cpp
doc/: doxy_gen.bat  doxy_gen.cfg  doxy_gen.sh  tcp_client_library.md
scripts/: start-client.sh
src/: CMakeLists.txt  ossimTcpStreamClient.cpp  ossimTcpStreamClient.h  tcpclient.cpp  tcpclient.h  tcpclientapp.cpp  tcpclientapp.h
